mdapipkg/unpackaged/objects/Participant__c.object
<CustomObject>
    <description>Contributes in some way - musician, volunteer, etc.</description>
    <fields>
        <fullName>Concert__c</fullName>
        <description>Lookup to Concert</description>
        <inlineHelpText>Lookup to Concert</inlineHelpText>
        <label>Concert</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Participants</relationshipLabel>
        <relationshipName>Participants</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Instrument__c</fullName>
        <formula>TEXT(ParticipantName__r.Instrument__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instrument</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherInstrumentforConcert__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If playing a different instrument for this Concert</description>
        <inlineHelpText>If playing a different instrument for this Concert</inlineHelpText>
        <label>Other Instrument for Concert</label>
        <referenceTo>Instrument__c</referenceTo>
        <relationshipLabel>Participants</relationshipLabel>
        <relationshipName>Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParticipantName__c</fullName>
        <description>Lookup to Contact</description>
        <inlineHelpText>Lookup to Contact</inlineHelpText>
        <label>Participant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Participation</relationshipLabel>
        <relationshipName>Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Participant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Concert__c</columns>
        <columns>ParticipantName__c</columns>
        <columns>Instrument__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Participant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>